refactoring the code

--- a/desafio-01/index.html
+++ b/desafio-01/index.html
@@ -17,10 +17,12 @@
   <body>
     <header>
       <div class="container">
-        <div class="logo">
-          <img src="assets/logo.svg" alt="Logo do site" />
-          <h1>thebank</h1>
-        </div>
+        <a href="#">
+          <div class="logo">
+            <img src="assets/logo.svg" alt="Logo do site" />
+            <h1>thebank</h1>
+          </div>
+        </a>
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
