--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <h1>Desafios HTML CSS Avançado</h1>
       <p>As imagens são links</p>
-      <a href="desafio-01/index.html">
+      <a href="desafio-01/index.html" target="_blank">
         <div class="thebank"></div>
       </a>
     </main>
