Add landing page with grid

--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
     <main>
       <h1>Desafios HTML CSS Avançado</h1>
       <p>As imagens são links</p>
-      <a href="desafio-01/index.html" target="_blank">
-        <div class="thebank"></div>
-      </a>
+      <div class="box">
+        <a href="desafio-01/index.html" target="_blank">
+          <div class="thebank"></div>
+        </a>
+      </div>
+      <div class="box">
+        <a href="">
+          <div class="agencia-xyz"></div>
+        </a>
+      </div>
     </main>
   </body>
 </html>
