Fixing the link to agencia-xyz

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <div class="box">
-        <a href="">
+        <a href="landing-page-com-grid-agencia-xyz/index.html">
           <div class="agencia-xyz"></div>
         </a>
       </div>
