Added flexbox challenge

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         </a>
       </div>
       <div class="box">
-        <a href="landing-page-com-grid-agencia-xyz/index.html">
+        <a href="landing-page-com-grid-agencia-xyz/index.html" target="_blank">
           <div class="agencia-xyz"></div>
+        </a>
+      </div>
+      <div class="box">
+        <a href="desafio-02/index.html" target="_blank">
+          <div class="flex-box"></div>
         </a>
       </div>
     </main>
